# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
.github/: Dockerfile  deploy.sh
.github/workflows/: bazel.yaml  ci.yaml  docker.yaml
src/apis/: BUILD.bazel  abstract_api_base.py  abstract_api_base_test.py
src/apis/examples/: BUILD.bazel  get_widgets.py  get_widgets_test.py
src/zones/examples/: BUILD.bazel
toolchains/: BUILD.bazel
toolchains/python/: BUILD.bazel
tools/: BUILD.bazel  providers.bzl  utils.bzl
tools/coverage/python/: .coveragerc  BUILD.bazel  coverage_bin.py  index.bzl  main_test.py
tools/deploy/: BUILD.bazel  deploy.bzl  package_hosting.json
tools/deploy/api/: BUILD.bazel  deploy_api.py  deploy_api_test.py  index.bzl
tools/lint/bazel/: BUILD.bazel  index.bzl
tools/lint/python/: .pylintrc  BUILD.bazel  index.bzl  python_format_bin.py
tools/package/: BUILD.bazel  index.bzl  package_bin.py  package_bin_test.py  package_runtimes.py  package_runtimes_test.py
