load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//tools/lint/bazel:index.bzl", "bzl_lint_test")

buildifier(
    name = "buildifier",
)

bzl_lint_test(
    name = "workspace_bzl_lint_test",
    data =
        glob([
            "*.bazel",
            "*.bzl",
        ]) + [
            "WORKSPACE",
        ],
)
