load("//tools/lint/bazel:index.bzl", "bzl_lint_test")
load("//tools/coverage/python:index.bzl", "py_coverage_test")
load("//tools/lint/python:index.bzl", "py_lint_test")
load("@rules_python//python:defs.bzl", "py_library")

bzl_lint_test(
    name = "api_base_bzl_lint_test",
    data = glob([
        "*.bazel",
        "*.bzl",
    ]),
)

py_library(
    name = "api_base_py_lib",
    srcs = [":abstract_api_base.py"],
)

py_coverage_test(
    name = "api_base_py_coverage_test",
    srcs = [":abstract_api_base_test.py"],
    deps = [":api_base_py_lib"],
)

py_lint_test(
    name = "api_base_py_lint_test",
    srcs = glob(["*.py"]),
)
