load("//tools/lint/bazel:index.bzl", "bzl_lint_test")

package(default_visibility = ["//visibility:public"])

bzl_lint_test(
    name = "deploy_bzl_lint_test",
    data = glob([
        "*.bazel",
        "*.bzl",
    ]),
)

filegroup(
    name = "package_hosting_template",
    srcs = [":package_hosting.json"],
)
