load("//tools/lint/bazel:index.bzl", "bzl_lint_test")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//tools/coverage/python:index.bzl", "py_coverage_test")
load("//tools/lint/python:index.bzl", "py_lint_test")

package(default_visibility = ["//visibility:public"])

bzl_lint_test(
    name = "packaging_bzl_lint_test",
    data = glob([
        "*.bazel",
        "*.bzl",
    ]),
)

py_binary(
    name = "package_api_bin",
    srcs = [":package_bin.py"],
    main = ":package_bin.py",
    deps = ["package_runtimes_py_lib"],
)

py_library(
    name = "package_runtimes_py_lib",
    srcs = [":package_runtimes.py"],
)

py_coverage_test(
    name = "package_api_bin_py_coverage_test",
    srcs = [
        "package_bin_test.py",
        "package_runtimes_test.py",
    ],
    deps = [
        "package_api_bin",
        "package_runtimes_py_lib",
    ],
)

py_lint_test(
    name = "package_api_bin_py_lint_test",
    srcs = glob(["*.py"]),
)
