load("//tools/lint/bazel:index.bzl", "bzl_lint_test")
load("//tools/coverage/python:index.bzl", "py_coverage_test")
load("//tools/lint/python:index.bzl", "py_lint_test")
load("@rules_python//python:defs.bzl", "py_library")

bzl_lint_test(
    name = "get_widgets_example_bzl_lint_test",
    data = glob([
        "*.bazel",
        "*.bzl",
    ]),
)

py_library(
    name = "get_widgets_example_py_lib",
    srcs = [":get_widgets.py"],
    deps = ["//src/apis:api_base_py_lib"],
)

py_coverage_test(
    name = "get_widgets_example_py_coverage_test",
    srcs = [":get_widgets_test.py"],
    deps = [":get_widgets_example_py_lib"],
)

py_lint_test(
    name = "get_widgets_example_py_lint_test",
    srcs = glob(["*.py"]),
)
