load("//tools/lint/bazel:index.bzl", "bazel_lint_test")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

bazel_lint_test(
    name = "python_coverage_bazel_lint_test",
    data = [
        "BUILD.bazel",
    ],
)

filegroup(
    name = "coverage_config",
    srcs = [":.coveragerc"],
)

py_binary(
    name = "coverage_bin",
    srcs = [":coverage_bin.py"],
    main = ":coverage_bin.py",
    deps = ["//third_party/pypi:coverage"],
)
